Bug 1558786 - Report rejected promises from workers to the right window. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D69256

--HG--
extra : moz-landing-system : lando